src/snapshots/zeek_language_server__ast__test__typ_var_decl-3.snap
---
source: src/ast.rs
expression: db.typ(decl)
---
Some(
    Decl {
        module: None,
        id: "i",
        fqid: "B::i",
        kind: Field,
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 2,
                        character: 16,
                    },
                    end: Position {
                        line: 2,
                        character: 17,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 2,
                        character: 16,
                    },
                    end: Position {
                        line: 2,
                        character: 17,
                    },
                },
                uri: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/x.zeek",
                    query: None,
                    fragment: None,
                },
            },
        ),
        documentation: "```zeek\n# In B\ni: count;\n```",
    },
)
