src/snapshots/zeek_language_server__ast__test__typ_var_decl-4.snap
---
source: src/ast.rs
expression: "crate::ast::typ(&db.0, decl)"
---
Some(
    Decl {
        module: Global,
        id: u!("count"),
        fqid: u!("count"),
        kind: Builtin(
            Count,
        ),
        is_export: None,
        loc: None,
        documentation: u!("Builtin type 'count'"),
    },
)
