src/snapshots/zeek_language_server__ast__test__typ_var_decl.snap
---
source: src/ast.rs
expression: "crate::ast::typ(&db.0, decl)"
---
Some(
    Decl {
        module: None,
        id: u!("B"),
        fqid: u!("B"),
        kind: Type(
            [
                Decl {
                    module: None,
                    id: u!("i"),
                    fqid: u!("B::i"),
                    kind: Field(
                        [],
                    ),
                    is_export: None,
                    loc: Some(
                        Location {
                            range: Range {
                                start: Position {
                                    line: 2,
                                    character: 16,
                                },
                                end: Position {
                                    line: 2,
                                    character: 17,
                                },
                            },
                            selection_range: Range {
                                start: Position {
                                    line: 2,
                                    character: 16,
                                },
                                end: Position {
                                    line: 2,
                                    character: 17,
                                },
                            },
                            uri: InternedUri(Id(_)),
                        },
                    ),
                    documentation: u!("```zeek\n# In B\ni: count;\n```"),
                },
            ],
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 1,
                        character: 12,
                    },
                    end: Position {
                        line: 3,
                        character: 14,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 1,
                        character: 17,
                    },
                    end: Position {
                        line: 1,
                        character: 18,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\ntype B: record {\n                i: count;\n            };\n```"),
    },
)
